fix(look&feel): radioselect horizontal flexwrap set to wrap

--- a/client/look-and-feel/css/src/Form/Radio/Radio.scss
+++ b/client/look-and-feel/css/src/Form/Radio/Radio.scss
@@ -240,7 +240,7 @@
     color: var(--color-gray-700);
 
     &--horizontal {
-      flex-direction: row;
+      flex-flow: row wrap;
     }
   }
 }
